--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,18 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome to the MCQ Quiz</title>
   <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="head.css">
 </head>
+
 <body>
-  <div class="main-container">
-    <h1>Welcome to the MCQ Quiz</h1>
-    <p>Test your knowledge by answering multiple-choice questions!</p>
-    <button onclick=""><a href="QuizPage.html">Start Quiz</a></button>
+  <div class="main">
+    <!-- nav -->
+    <nav class="head">
+
+      <input type="checkbox" id="check1" class="check1">
+      
+      <div class="head-front">
+
+        <label for="check1">
+          <span class="">=</span>
+        </label>
+
+        <div class="bar">
+          <a href="#" class="button">SIGN UP</a>
+          <a href="#" class="button">LOGIN</a>
+        </div>
+
+      </div>
+
+
+      <div class="head-back">
+
+        <div class="search-box">
+          <i class="">&#xf2bd</i>
+          <input class="search" type="text" placeholder="Search">
+        </div>
+
+        <a href="profile.html" class="profile">
+          <span class="">&#xf2bd</span>
+        </a>
+
+      </div>
+    </nav>
   </div>
+
 
   <script src="index.js"></script>
 </body>
+
 </html>
