--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,10 +12,28 @@
 <body>
   <div class="main">
     <!-- nav -->
-    <nav class="head">
 
-      <input type="checkbox" id="check1" class="check1">
-      
+  <input type="checkbox" id="check1" class="check1">
+  <div class="sidebar">
+    <div class="side-head">
+      <label class="cross" for="check1">
+        <span class="Cross">X</span>
+      </label>
+  
+      <a href="signup.html" class="sign-up">Sign-up</a>
+      <a href="login.html" class="sign-up">Login</a>
+    </div>
+
+    <div class="sidebar-options">
+      <h2 class="side-h2">Try </h2>
+      <a href="#" class="side-button">Genral Knowledge</a>
+      <a href="#" class="side-button">Science</a>
+      <a href="#" class="side-button">English</a>
+      <a href="#" class="side-button">Math</a>
+    </div>
+  </div>
+
+    <nav class="head">
       <div class="head-front">
 
         <label for="check1">
@@ -23,6 +41,7 @@
         </label>
 
         <div class="bar">
+          <a href="#" class="logo">LOGO</a>
           <a href="#" class="button">SIGN UP</a>
           <a href="#" class="button">LOGIN</a>
         </div>
@@ -43,6 +62,8 @@
 
       </div>
     </nav>
+
+
   </div>
 
 
