--- a/frontend/QuizPage.html
+++ b/frontend/QuizPage.html
@@ -32,7 +32,7 @@
     <button id="submit">Submit</button>
   </div>
 
-  <!-- <script src="QuizPage.js"></script> -->
+  <script src="QuizPage.js"></script>
 </body>
 </html>
 
