--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,8 +42,8 @@
 
         <div class="bar">
           <a href="#" class="logo">LOGO</a>
-          <a href="#" class="button">SIGN UP</a>
-          <a href="#" class="button">LOGIN</a>
+          <a href="signup.html" class="button">SIGN UP</a>
+          <a href="login.html" class="button">LOGIN</a>
         </div>
 
       </div>
