--- a/frontend/login.html
+++ b/frontend/login.html
@@ -26,7 +26,7 @@
             <p>Don't have an account <a href="signup.html">register</a></p>
         </form>
     </div>
-    <!-- <script src="login.js"></script> -->
+    <script src="login.js"></script>
 </body>
 
 </html>
