--- a/frontend/QuizPage.html
+++ b/frontend/QuizPage.html
@@ -7,31 +7,12 @@
   <link rel="stylesheet" href="QuizPaze.css">
 </head>
 <body>
-  <div class="quiz-container" id="quiz">
-    <div id="quiz-header">
-      <h2 id="question">Q1. Question Text is going to display here</h2>
-    </div>
-    <ul>
-      <li>
-        <input type="radio" name="answer" id="a" class="answer">
-        <label for="a" id="a_text">Answer A</label>
-      </li>
-      <li>
-        <input type="radio" name="answer" id="b" class="answer">
-        <label for="b" id="b_text">Answer B</label>
-      </li>
-      <li>
-        <input type="radio" name="answer" id="c" class="answer">
-        <label for="c" id="c_text">Answer C</label>
-      </li>
-      <li>
-        <input type="radio" name="answer" id="d" class="answer">
-        <label for="d" id="d_text">Answer D</label>
-      </li>
-    </ul>
-    <button id="submit">Submit</button>
+  <div class="Parent-Box" id="Parent-Box">
+  
   </div>
+  <button id="submit">Submit</button>
 
+  
   <script src="QuizPage.js"></script>
 </body>
 </html>
