Adding indexes for easier travel

--- a/frontend/QuizPage.html
+++ b/frontend/QuizPage.html
@@ -7,10 +7,21 @@
   <link rel="stylesheet" href="QuizPaze.css">
 </head>
 <body>
-  <div class="Parent-Box" id="Parent-Box">
-  
+  <div class="heading">
+    <h1> Quiz Going On :</h1>
   </div>
-  <button id="submit">Submit</button>
+  <div class="top">
+    <div class="index-numbers" id="index-numbers">
+      
+    </div>
+    <div class="main">
+      <div class="Parent-Box" id="Parent-Box">
+    
+      </div>
+  
+    <button id="submit">Submit</button>
+    </div>
+  </div>
   <script src="QuizPage.js"></script>
 </body>
 </html>
