Adding submit handler function

--- a/frontend/QuizPage.html
+++ b/frontend/QuizPage.html
@@ -19,9 +19,16 @@
     
       </div>
   
-    <button id="submit">Submit</button>
+      <button  id="submit" onclick="submitHandlerManualy()">Submit</button>
+      <div class="Submit-Confirm">
+        <p>Are You Sure You Want To Submit ?</p>
+        <button onclick="">Yes</button>
+        <button>No</button>
+      </div>
     </div>
+    
   </div>
+  
   <script src="QuizPage.js"></script>
 </body>
 </html>
