--- a/frontend/QuizPage.html
+++ b/frontend/QuizPage.html
@@ -20,11 +20,11 @@
       </div>
   
       <button  id="submit" onclick="submitHandlerManualy()">Submit</button>
-      <div class="Submit-Confirm">
-        <p>Are You Sure You Want To Submit ?</p>
-        <button onclick="">Yes</button>
-        <button>No</button>
-      </div>
+      <div class="Submit-Confirm" id="Submit-Confirm">
+        <p>Are You Sure You Want To Submit?</p>
+        <button id="confirm-yes">Yes</button>
+        <button id="confirm-no">No</button>
+    </div>
     </div>
     
   </div>
