Adding functions to Store Results of Users

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,9 +56,9 @@
           <input class="search" type="text" placeholder="Search">
         </div>
 
-        <a href="profile.html" class="profile">
-          <span class="">&#xf2bd</span>
-        </a>
+        <div class="profile" onclick="CheckLogIn()">
+          <span class="" id="UserName">NOT FOUND</span>
+        </div>
 
       </div>
     </nav>
