Adding Result Page

--- a/frontend/resultpage.html
+++ b/frontend/resultpage.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="resultpage.css">
 </head>
 <body>
-    <h2>This is the Result Page...</h2>
+    <div class="container">
+        <h1>Quiz Results</h1>
+        <div id="results"></div>
+        <div id="score"></div>
+    </div>
+    <script src="resultpage.js"></script>
 </body>
 </html>
