Storing All thePast Info Of Results in LocalStorage

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,9 +41,9 @@
         </label>
 
         <div class="bar">
-          <a href="#" class="logo">LOGO</a>
-          <a href="signup.html" class="button">SIGN UP</a>
-          <a href="login.html" class="button">LOGIN</a>
+          <a href="#index.html" class="logo">LOGO</a>
+          <a href="signup.html" id="sign-up" class="button">SIGN UP</a>
+          <a href="login.html" id="login" class="button">LOGIN</a>
         </div>
 
       </div>
