Adding Page So You can Create Your own quizes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,9 +41,10 @@
         </label>
 
         <div class="bar">
-          <a href="#index.html" class="logo">LOGO</a>
+          <a href="index.html" class="logo">QuizGame</a>
           <a href="signup.html" id="sign-up" class="button">SIGN UP</a>
           <a href="login.html" id="login" class="button">LOGIN</a>
+          <button class="Create-button" onclick="TakeMeToCreatePage()">Create + </button>
         </div>
 
       </div>
@@ -70,7 +71,7 @@
     </div>
 
   </div>
-
+<script src="head.js"></script>
 <script src="index.js"></script>
 </body>
 
