--- a/frontend/resultpage.html
+++ b/frontend/resultpage.html
@@ -12,6 +12,7 @@
 <body>
     <div class="main">
         <!-- nav -->
+
         <input type="checkbox" id="check1" class="check1">
         <div class="sidebar">
             <div class="side-head">
@@ -40,9 +41,10 @@
                 </label>
 
                 <div class="bar">
-                    <a href="index.html" class="logo">LOGO</a>
+                    <a href="index.html" class="logo">QuizGame</a>
                     <a href="signup.html" id="sign-up" class="button">SIGN UP</a>
                     <a href="login.html" id="login" class="button">LOGIN</a>
+                    <button class="Create-button" onclick="TakeMeToCreatePage()">Create + </button>
                 </div>
 
             </div>
@@ -69,6 +71,8 @@
             <div id="score"></div>
         </div>
     </div>
+
+    <script src="head.js"></script>
     <script src="resultpage.js"></script>
 </body>
 
