--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="signup.css">
     
 </head>
-
+ 
 <body>
     <div class="mainbox">
         <form id="signupform">
-            <h1 style="text-align: center; margin-top: 40px; margin-bottom: 50px;">Sign up</h1>
+            <h1 class="heading" >Sign up</h1>
 
             <input type="text" placeholder="Name" id="name" name="name" class="en" required>
             <input type="email" placeholder="Email" id="mail" name="Email" class="em" required>
@@ -34,6 +34,7 @@
             <p>Already have an account <a href="login.html">login</a></p>
         </form>
     </div>
+    
     <script src="signup.js"></script> 
 </body>
 </html>
