adding cutom create

--- a/frontend/Create.html
+++ b/frontend/Create.html
@@ -54,7 +54,7 @@
                 <div class="head-back">
 
                     <div class="search-box">
-                        <i class="">&#xf2bd</i>
+                        <i class=""></i>
                         <input class="search" type="text" placeholder="Search">
                     </div>
 
@@ -88,6 +88,9 @@
                     </select> <br>
                     <input type="submit" class="submit-button" value="Create Quiz">
                 </form>
+                <div class="custom-button-container">
+                    <button class="custom-button">Create Custom</button>
+                </div>
             </div>
         </div>
 
