--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,7 +53,7 @@
       <div class="head-back">
 
         <div class="search-box">
-          <i class="">&#xf2bd</i>
+          <i class=""></i>
           <input class="search" type="text" placeholder="Search">
         </div>
 
